# DuckSlayer

./: .gitignore  Cargo.toml  build-windows.sh  credits.md  flake.nix  gimp-to-bevy-coord-conversion.py  personal-notes.md  program-todo.md  shell.nix
assets/: convert-to-png.sh
assets/levels/: level_five.level.json  level_four.level.json  level_one.level.json  level_seven.level.json  level_six.level.json  level_three.level.json  level_two.level.json
src/: asset_load_schedule.rs  back_btn.rs  card.rs  debug.rs  debug_ui.rs  deckbar.rs  game_messages.rs  global.rs  goal_board.rs  ingame_ui_root.rs  initialize_game.rs  level_select.rs  lib.rs  main.rs  manage_level.rs  nest.rs  settings_screen.rs  titlescreen.rs  troops.rs  util.rs  volume_settings.rs  widgets.rs
src/card/: card_behaviors.rs  card_constants.rs
src/card/card_behaviors/: follow_path.rs
src/manage_level/: debug_ui.rs  editor_ui.rs  game_controls.rs  game_messages.rs  level.rs
src/manage_level/editor_ui/: saving_loading_levels.rs
src/manage_level/game_controls/: save_indicator.rs
src/widgets/: checkbox.rs  slider.rs
